--- a/lipo-sapr-lab1/lipo-sapr-lab1.vcxproj
+++ b/lipo-sapr-lab1/lipo-sapr-lab1.vcxproj
@@ -151,9 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Helloer.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Heloer.cpp" />
     <ClCompile Include="lipo-sapr-lab1.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
